# Github-Lab-AI-Lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.codesight/: default.json
.github/: FUNDING.yml
.github/workflows/: blank.yml
clowdbot/: __init__.py  config.py  database.py  database_migrations.py  logging_config.py  models.py
clowdbot/api/: __init__.py  events.py  health.py  incidents.py  middleware.py  router.py  status.py  triggers.py
clowdbot/bot/: __init__.py  client.py  commands.py
clowdbot/incidents/: __init__.py  classifier.py  recommender.py  service.py
clowdbot/monitoring/: __init__.py  alerts.py  health.py  uptime.py
clowdbot/webhooks/: __init__.py  github.py  verify.py
docs/: API.md  ARCHITECTURE.md  RUNBOOK.md
tests/: __init__.py  conftest.py  test_config.py  test_events.py  test_health.py  test_incidents.py  test_status.py  test_triggers.py  test_webhooks.py
